# mycompiler

./: .gitignore  CMakeLists.txt  OPERATION.md  OPERATIONS.md  PUBLIC_RULES.md  README.md  build_lexer.bat  build_parser.bat  build_tests.bat  configure.sh  lex.yy.h  pack_files.ps1  pack_ir_submission.ps1  pack_riscv_submission.ps1  pack_src.ps1  phase1.md  problem.md  read.md  request.md  sy.md  sylib.c  test_simple.cpp  testfile.txt
docs/: CHANGELOG_REPORT.md  README.md
docs/implementation/: README.md
docs/implementation-current/: README.md  codegen.md  lexer.md  parser.md  tools.md
docs/reference/: lib.md  llvm-ir-primer.md  sysy2022.md
docs/requirements/: sysy-grammar-2026.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-04-07-self-hosted-llvm-ir-backend.md
docs/superpowers/specs/: 2026-04-02-superpowers-init-design.md  2026-05-14-riscv-backend-design.md  2026-05-14-sysy-llvm-riscv-compiler-design.md  spec-template.md
examples/: test_expr.cmm
include/: Ast.h  Codegen.h  IRBuilder.h  Ir.h  IrBuilder.h  IrPrinter.h  IrText.h  Lexer.h  ParserFrontend.h  RiscVBackend.h  Semantic.h  Stream.h  Token.h  common.h
public/: output.ll
runtime/: sylib.c
src/: Ast.cpp  Codegen.cpp  IRBuilder.cpp  Ir.cpp  IrBuilder.cpp  IrPrinter.cpp  IrText.cpp  Lexer.cpp  ParserFrontend.cpp  RiscVBackend.cpp  Semantic.cpp  Token.cpp  cmm.l  cmm.y  compiler_main.cpp  lexer_main.cpp  main.cpp  parser_main.cpp  sysy.y  yylex.cpp
src/codegen/: CodeGen.h  MIPSAssembler.h
src/ir/: IRGenerator.h  Quad.h
src/symtab/: Symbol.h  SymbolTable.cpp  SymbolTable.h
tests/: check_float_probe.ps1  test_ast_semantic.cpp  test_codegen.cpp  test_common.cpp  test_complex.cpp  test_float_diagnostics.ps1  test_ir_generation.cpp  test_ir_text.cpp  test_lexer.cpp  test_parser.cpp  test_parser_debug.cpp  test_public.ps1  test_public.sh  test_public_ir.ps1  test_public_riscv.ps1  test_public_riscv_cases.ps1  test_riscv_backend.cpp  test_stream.cpp  test_symbol.cpp  test_symbol_table.cpp  test_token.cpp
